--- a/index.html
+++ b/index.html
@@ -1153,16 +1153,19 @@
             </div>
         </section>
         <!-- cta -->
-        <section id="cta" class="container-fluid py-5">
-            <div
-                class="banner-content-box overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                <div class="text-center text-white p-3">
-                    <h2 class="display-3 fw-bold">Start Abacus Learning in India Today</h2>
-                    <p>Enroll your child in our abacus programs or start abacus franchise in
+        <section id="cta" class="container-fluid py-5 d-flex align-items-center justify-content-center">
+            <div class="container d-flex justify-content-center align-items-center">
+                <div class="cta-glass-box text-center p-4 p-md-5">
+                    <h2 class="display-4 fw-bold mb-4">Start Abacus Learning in India Today</h2>
+                    <p class="lead mb-4">Enroll your child in our abacus programs or start abacus franchise in
                         India today. Become a partner with India’s leading abacus training
                         provider and help shape young minds!</p>
-                    <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn mt-3">Get In Touch <i
-                            class="fa-solid fa-pen-clip"></i></button>
+                    <div class="d-flex justify-content-center">
+                        <button onclick="msgBox()" id="chat-box" role="button" class="theme-btn-cta mt-2">
+                            <span>Get In Touch</span>
+                            <i class="bi bi-chat-right-text-fill ms-2"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
@@ -1176,13 +1179,15 @@
                         class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box">
                         <h4>Quick Links</h4>
                         <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3">
-                            <a href="index.html" class="fot-a">Home</a>
-                            <a href="about-us.html" class="fot-a">About US</a>
-                            <a href="gallery.html" class="fot-a">Gallery</a>
-                            <a href="blog.html" class="fot-a">Blog</a>
-                            <a href="events.html" class="fot-a">Events</a>
-                            <a href="franchise.html" class="fot-a">Franchisee</a>
-                            <a href="contact-us.html" class="fot-a">Contact us</a>
+                            <a href="index.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Home</a>
+                            <a href="about-us.html" class="fot-a"><i class="bi bi-chevron-right small"></i> About US</a>
+                            <a href="gallery.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Gallery</a>
+                            <a href="blog.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Blog</a>
+                            <a href="events.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Events</a>
+                            <a href="franchise.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                                Franchisee</a>
+                            <a href="contact-us.html" class="fot-a"><i class="bi bi-chevron-right small"></i> Contact
+                                us</a>
                         </div>
                     </div>
                 </div>
@@ -1191,19 +1196,24 @@
                         class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box">
                         <h4>Our Courses</h4>
                         <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3">
-                            <a href="our-courses/abacus.html" class="fot-a">Abacus</a>
-                            <a href="our-courses/speed-arithmetic.html" class="fot-a">Vedic Mathematics</a>
-                            <a href="our-courses/arka-kids.html" class="fot-a">Arka
-                                Kids</a>
-                            <a href="our-courses/creative-arts-india.html" class="fot-a">Creative Art India</a>
-                            <a href="our-courses/phonics-star.html" class="fot-a">Phonics
-                                Spark</a>
-                            <a href="our-courses/handwriting.html" class="fot-a">Handwriting</a>
-                            <a href="our-courses/brite-english.html" class="fot-a">Brite
-                                English</a>
-                            <a href="our-courses/brain-tree.html" class="fot-a">Brain
-                                Tree</a>
-                            <a href="our-courses/my-math.html" class="fot-a">My Math</a>
+                            <a href="our-courses/abacus.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                                Abacus</a>
+                            <a href="our-courses/speed-arithmetic.html" class="fot-a"><i
+                                    class="bi bi-chevron-right small"></i> Vedic Mathematics</a>
+                            <a href="our-courses/arka-kids.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                                Arka Kids</a>
+                            <a href="our-courses/creative-arts-india.html" class="fot-a"><i
+                                    class="bi bi-chevron-right small"></i> Creative Art India</a>
+                            <a href="our-courses/phonics-star.html" class="fot-a"><i
+                                    class="bi bi-chevron-right small"></i> Phonics Spark</a>
+                            <a href="our-courses/handwriting.html" class="fot-a"><i
+                                    class="bi bi-chevron-right small"></i> Handwriting</a>
+                            <a href="our-courses/brite-english.html" class="fot-a"><i
+                                    class="bi bi-chevron-right small"></i> Brite English</a>
+                            <a href="our-courses/brain-tree.html" class="fot-a"><i
+                                    class="bi bi-chevron-right small"></i> Brain Tree</a>
+                            <a href="our-courses/my-math.html" class="fot-a"><i class="bi bi-chevron-right small"></i>
+                                My Math</a>
                         </div>
                     </div>
                 </div>
@@ -1211,46 +1221,31 @@
                     <div
                         class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box">
                         <h4>Our Branches</h4>
-                        <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-3 state-box">
-                            <a href="our-branches/abacus-in-andhra-pradesh.html">Andhra
-                                Pradesh</a> <span> </span>
+                        <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-2 state-box">
+                            <a href="our-branches/abacus-in-andhra-pradesh.html">Andhra Pradesh</a>
                             <a href="our-branches/abacus-in-gujarat.html">Gujarat</a>
-                            <span> </span>
                             <a href="our-branches/abacus-in-karnataka.html">Karnataka</a>
-                            <span> </span>
                             <a href="our-branches/abacus-in-kerala.html">Kerala</a>
-                            <span> </span>
                             <a href="our-branches/abacus-in-maharashtra.html">Maharashtra</a>
-                            <span> </span>
                             <a href="our-branches/abacus-in-punjab.html">Punjab</a>
-                            <span> </span>
                             <a href="our-branches/abacus-in-rajasthan.html">Rajasthan</a>
-                            <span> </span>
-                            <a href="our-branches/abacus-in-tamilnadu.html">Tamil
-                                Nadu</a> <span> </span>
+                            <a href="our-branches/abacus-in-tamilnadu.html">Tamil Nadu</a>
                             <a href="our-branches/abacus-in-telangana.html">Telangana</a>
-                            <span> </span>
-                            <a href="our-branches/abacus-in-west-bengal.html">West
-                                Bengal</a> <span> </span>
-                            <a href="our-branches/abacus-in-andaman-and-nicobar-islands.html">Andaman
-                                and Nicobar Islands</a> <span> </span>
+                            <a href="our-branches/abacus-in-west-bengal.html">West Bengal</a>
+                            <a href="our-branches/abacus-in-andaman-and-nicobar-islands.html">Andaman and Nicobar
+                                Islands</a>
                             <a href="our-branches/abacus-in-delhi.html">Delhi</a>
                         </div>
                     </div>
                     <div
                         class="d-flex justify-content-center align-items-start w-100 flex-column gap-3 footer-content-box mt-5">
                         <h4>Global Presence</h4>
-                        <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-3 state-box">
-                            <a href="our-branches/abacus-in-india.html">India</a> <span>
-                            </span>
+                        <div class="d-flex justify-content-start align-items-center w-100 flex-wrap gap-2 state-box">
+                            <a href="our-branches/abacus-in-india.html">India</a>
                             <a href="our-branches/abacus-in-zimbabwe.html">Zimbabwe</a>
-                            <span> </span>
-                            <a href="our-branches/abacus-in-south-africa.html">South
-                                Africa</a> <span> </span>
+                            <a href="our-branches/abacus-in-south-africa.html">South Africa</a>
                             <a href="our-branches/abacus-in-australia.html">Australia</a>
-                            <span> </span>
-                            <a href="our-branches/abacus-in-united-arab-emirates.html">United
-                                Arab Emirates</a>
+                            <a href="our-branches/abacus-in-united-arab-emirates.html">United Arab Emirates</a>
                         </div>
                     </div>
                 </div>
@@ -1259,18 +1254,18 @@
                         class="d-flex justify-content-center align-items-center w-100 flex-column gap-5 footer-content-box">
                         <a href="https://www.playabacusindia.com/"><img class="w-100"
                                 src="https://www.playabacusindia.com/images/logo.jpg" alt="logo"></a>
-                        <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-4">
-                            <a href="https://maps.app.goo.gl/2zDLx1TKKpa7nPZQ6" class="fot-a"><i
-                                    class="fa-solid fa-map-location-dot"></i> No.14, Thiruvika 3rd
-                                Street, Royapettah high road,
-                                Mylapore (opposite to Kesari school),
-                                Chennai -600 004 , Tamil Nadu , India.</a>
-                            <a href="tel:919940416989" class="fot-a"><i class="fa-solid fa-mobile-screen-button"></i>
-                                +91 99404 16989</a>
-                            <a href="mailto:contact@playabacusindia.com" class="fot-a"><i
-                                    class="fa-solid fa-envelope-open"></i>
-                                contact@playabacusindia.com</a>
-
+                        <div class="d-flex justify-content-center align-items-start w-100 flex-column gap-3">
+                            <a href="https://maps.app.goo.gl/2zDLx1TKKpa7nPZQ6" class="fot-a align-items-start">
+                                <i class="bi bi-geo-alt-fill mt-1"></i>
+                                <span>No.14, Thiruvika 3rd Street, Royapettah high road, Mylapore, Chennai - 600 004,
+                                    Tamil Nadu, India.</span>
+                            </a>
+                            <a href="tel:919940416989" class="fot-a">
+                                <i class="bi bi-phone-fill"></i> +91 99404 16989
+                            </a>
+                            <a href="mailto:contact@playabacusindia.com" class="fot-a">
+                                <i class="bi bi-envelope-at-fill"></i> contact@playabacusindia.com
+                            </a>
                         </div>
                         <div class="d-flex justify-content-start me-auto align-items-center gap-2 imporatnt-links">
                             <a href="https://www.playabacusindia.com/terms-and-conditions.html" class="fot-a">Terms &
@@ -1278,20 +1273,19 @@
                             <a href="https://www.playabacusindia.com/copyright-policy.html" class="fot-a">Copyright
                                 Policy</a>
                         </div>
-                        <div class="d-flex justify-content-start align-items-center w-100 gap-4 social-icon">
-                            <h6 class="m-0">Follow US:</h6>
-                            <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                    class="fa-brands fa-square-facebook"></i></a>
-                            <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                    class="fa-brands fa-square-instagram"></i></a>
-                            <a href="https://x.com/PlayAbacus"><i class="fa-brands fa-square-x-twitter"></i></a>
-                            <a
-                                href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
-                                    class="fa-brands fa-square-whatsapp"></i></a>
-                            <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                    class="fa-brands fa-square-youtube"></i></a>
-                            <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                    class="fa-brands fa-linkedin"></i></a>
+                        <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon">
+                            <h6 class="m-0 me-2 text-white-50">Follow US:</h6>
+                            <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><i
+                                    class="bi bi-facebook"></i></a>
+                            <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><i
+                                    class="bi bi-instagram"></i></a>
+                            <a href="https://x.com/PlayAbacus" title="X (Twitter)"><i class="bi bi-twitter-x"></i></a>
+                            <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><i
+                                    class="bi bi-whatsapp"></i></a>
+                            <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><i
+                                    class="bi bi-youtube"></i></a>
+                            <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
+                                title="LinkedIn"><i class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
