completed social icon

--- a/index.html
+++ b/index.html
@@ -163,18 +163,18 @@
                         <div class="col-12 col-md-12 col-lg-6 p-0">
                             <div class="d-flex justify-content-start align-items-center w-100 h-100">
                                 <div class="d-flex justify-content-center align-items-center gap-4 ms-3 social-icon">
-                                    <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                            class="bi bi-facebook"></i></a>
-                                    <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                            class="bi bi-instagram"></i></a>
-                                    <a href="https://x.com/PlayAbacus"><i class="bi bi-twitter-x"></i></a>
-                                    <a
-                                        href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
-                                            class="bi bi-whatsapp"></i></a>
-                                    <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                            class="bi bi-youtube"></i></a>
-                                    <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                            class="bi bi-linkedin"></i></a>
+                                    <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
+                                            src="images/socialicons/facebook.svg" alt="Facebook"></a>
+                                    <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
+                                            src="images/socialicons/instagram.svg" alt="Instagram"></a>
+                                    <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img
+                                            src="images/socialicons/x.svg" alt="X"></a>
+                                    <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"
+                                        title="WhatsApp"><img src="images/socialicons/whatsapp.svg" alt="WhatsApp"></a>
+                                    <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"
+                                        title="YouTube"><img src="images/socialicons/youtube.svg" alt="YouTube"></a>
+                                    <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
+                                        title="LinkedIn"><img src="images/socialicons/linkedin.svg" alt="LinkedIn"></a>
                                 </div>
                             </div>
                         </div>
@@ -312,20 +312,20 @@
                             </div>
                         </div>
                         <div class="d-flex d-md-flex d-xl-none align-items-start w-100 h-100 flex-column ">
-                            <h3 class="text-white">Follow Us</h3>
-                            <div class="d-flex justify-content-center align-items-center gap-4 social-icon">
-                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                        class="fa-brands fa-square-facebook"></i></a>
-                                <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                        class="fa-brands fa-square-instagram"></i></a>
-                                <a href="https://x.com/PlayAbacus"><i class="fa-brands fa-square-x-twitter"></i></a>
-                                <a
-                                    href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
-                                        class="fa-brands fa-square-whatsapp"></i></a>
-                                <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                        class="fa-brands fa-square-youtube"></i></a>
-                                <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                        class="fa-brands fa-linkedin"></i></a>
+                            <div class="d-flex align-items-center gap-3 social-icon">
+                                <h3 class="text-white m-0">Follow Us</h3>
+                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
+                                        src="images/socialicons/facebook.svg" alt="Facebook"></a>
+                                <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
+                                        src="images/socialicons/instagram.svg" alt="Instagram"></a>
+                                <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img
+                                        src="images/socialicons/x.svg" alt="X"></a>
+                                <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"
+                                    title="WhatsApp"><img src="images/socialicons/whatsapp.svg" alt="WhatsApp"></a>
+                                <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
+                                        src="images/socialicons/youtube.svg" alt="YouTube"></a>
+                                <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
+                                    title="LinkedIn"><img src="images/socialicons/linkedin.svg" alt="LinkedIn"></a>
                             </div>
                         </div>
                     </div>
@@ -1273,19 +1273,21 @@
                             <a href="https://www.playabacusindia.com/copyright-policy.html" class="fot-a">Copyright
                                 Policy</a>
                         </div>
-                        <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon">
+                        <div class="d-flex justify-content-start align-items-center w-100 gap-3 social-icon"
+                            id="footer-social-section">
                             <h6 class="m-0 me-2 text-white-50">Follow US:</h6>
-                            <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><i
-                                    class="bi bi-facebook"></i></a>
-                            <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><i
-                                    class="bi bi-instagram"></i></a>
-                            <a href="https://x.com/PlayAbacus" title="X (Twitter)"><i class="bi bi-twitter-x"></i></a>
-                            <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..." title="WhatsApp"><i
-                                    class="bi bi-whatsapp"></i></a>
-                            <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><i
-                                    class="bi bi-youtube"></i></a>
+                            <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
+                                    src="images/socialicons/facebook.svg" alt="Facebook"></a>
+                            <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
+                                    src="images/socialicons/instagram.svg" alt="Instagram"></a>
+                            <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img src="images/socialicons/x.svg"
+                                    alt="X"></a>
+                            <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus..."
+                                title="WhatsApp"><img src="images/socialicons/whatsapp.svg" alt="WhatsApp"></a>
+                            <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
+                                    src="images/socialicons/youtube.svg" alt="YouTube"></a>
                             <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
-                                title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+                                title="LinkedIn"><img src="images/socialicons/linkedin.svg" alt="LinkedIn"></a>
                         </div>
                     </div>
                 </div>
