--- a/index.html
+++ b/index.html
@@ -250,14 +250,14 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="index.html"><i
                                         class="fa-solid fa-house me-1"></i> Home</a>
-                            </li><span class="nav-line"></span>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="about-us.html"><i class="fa-solid fa-user-group me-1"></i>
                                     About Us</a>
-                            </li><span class="nav-line"></span>
+                            </li>
                             <div class="dropdown">
-                                <button class="btn dropdown-toggle drop-box" type="button" data-bs-toggle="dropdown"
-                                    aria-expanded="false">
+                                <button class="btn dropdown-toggle drop-box text-start" type="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     <i class="fa-solid fa-book-open me-1"></i> Our Courses
                                 </button>
                                 <ul class="dropdown-menu">
@@ -281,14 +281,12 @@
                                     </li>
                                     <li><a class="dropdown-item" href="our-courses/my-math.html">My Math</a>
                                     </li>
-
                                 </ul>
                             </div>
-                            <span class="nav-line"></span>
                             <li class="nav-item">
                                 <a class="nav-link" href="gallery.html"><i class="fa-solid fa-images me-1"></i>
                                     Gallery</a>
-                            </li><span class="nav-line"></span>
+                            </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-phone me-1"></i>
                                     Contact Us</a>
@@ -300,20 +298,20 @@
                                 class="fa-solid fa-exclamation fa-bounce text-warning"></i>
                         </a>
                         <div
-                            class="d-flex d-md-flex d-xl-none justify-content-center align-items-start flex-column w-100 gap-4 my-5">
-                            <div class="d-flex justify-content-center align-items-start flex-column text-white">
-                                <p class="m-0">MAIL</p>
+                            class="d-flex d-md-flex d-xl-none justify-content-start align-items-start flex-column w-100 gap-2 mt-4 mb-2">
+                            <div class="d-flex justify-content-start align-items-start flex-column text-white">
+                                <p class="m-0 text-white-50 small fw-bold">MAIL US</p>
                                 <a href="mailto:contact@playabacusindia.com"
-                                    class="text-white">contact@playabacusindia.com</a>
+                                    class="text-white text-decoration-none">contact@playabacusindia.com</a>
                             </div>
-                            <div class="d-flex justify-content-center align-items-start flex-column text-white">
-                                <p class="m-0">CAll</p>
-                                <a href="tel:919940416989" class="text-white">+91 99404 16989</a>
+                            <div class="d-flex justify-content-start align-items-start flex-column text-white">
+                                <p class="m-0 text-white-50 small fw-bold">CALL US</p>
+                                <a href="tel:919940416989" class="text-white text-decoration-none">+91 99404 16989</a>
                             </div>
                         </div>
-                        <div class="d-flex d-md-flex d-xl-none align-items-start w-100 h-100 flex-column ">
-                            <div class="d-flex align-items-center gap-3 social-icon">
-                                <h3 class="text-white m-0">Follow Us</h3>
+                        <div class="d-flex d-md-flex d-xl-none align-items-start w-100 flex-column mt-auto pb-4">
+                            <h3 class="text-white mb-3">Follow Us</h3>
+                            <div class="d-flex align-items-center gap-4 social-icon">
                                 <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
                                         src="images/socialicons/facebook.svg" alt="Facebook"></a>
                                 <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
