--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
 
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap"
@@ -182,8 +183,8 @@
                             <div
                                 class="d-flex justify-content-end align-items-center w-100 h-100 contact-details gap-4">
                                 <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp"
-                                    class="text-warning">Franchisee
-                                    Portal <i class="fa-solid fa-exclamation fa-bounce text-warning"></i></a>
+                                    class="franchise-top-btn">Franchisee
+                                    Portal <i class="fa-solid fa-arrow-right-long ms-1"></i></a>
                                 <a href="https://www.playabacusindia.com/blog.html">Blog</a>
 
                                 <div class="dropdown ">
@@ -336,88 +337,73 @@
         <section id="banner" class="container-fluid mt-5 pt-3 pt-md-0 pt-lg-5">
             <div class="row">
                 <div class="col-12 p-0">
-                    <div id="banner-slide" class="carousel slide carousel-fade" data-bs-ride="carousel">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#banner-slide" data-bs-slide-to="0" class="active"
-                                aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#banner-slide" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                            <button type="button" data-bs-target="#banner-slide" data-bs-slide-to="2"
-                                aria-label="Slide 3"></button>
-                            <button type="button" data-bs-target="#banner-slide" data-bs-slide-to="3"
-                                aria-label="Slide 4"></button>
-                        </div>
-                        <div class="carousel-inner h-100">
-                            <div class="carousel-item h-100 active position-relative">
-                                <img src="images/banner/6.webp" class="d-block w-100" alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h1 class="display-3 fw-bold">Learn with Abacus – Fun & Fast Math</h1>
-                                        <p>Abacus training boosts memory, focus, and calculation speed.
-                                            Looking for an abacus near me? We’ve got you covered!</p>
-                                        <button onclick="msgBox()" id="chat-box" class="theme-btn-2 mt-4"
-                                            role="button"><span class="text">KNOW
-                                                MORE</span></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item h-100 position-relative">
-                                <img src="images/banner/9.webp" class="d-block w-100" alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h2 class="display-3 fw-bold">Abacus – Trusted by 3 Lakh+ Parents!</h2>
-                                        <p>3L+ Students Trained | Certified Program | Expert Mentors</p>
-                                        <button onclick="msgBox()" id="chat-box" class="theme-btn-2 mt-4"
-                                            role="button"><span class="text">KNOW
-                                                MORE</span></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item h-100 position-relative">
-                                <img src="images/banner/1.webp" class="d-block w-100" alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h2 class="display-3 fw-bold">Trusted by Parents. Loved by Kids.</h2>
-                                        <p>From abacus maths to abacus mastermind, we
-                                            shape young minds.
-                                            Explore abacus franchise opportunities in India today.</p>
-                                        <button onclick="msgBox()" id="chat-box" class="theme-btn-2 mt-4"
-                                            role="button"><span class="text">KNOW
-                                                MORE</span></a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="carousel-item h-100 position-relative">
-                                <img src="images/banner/3.webp" class="d-block w-100" alt="Abacus class and Franchises">
-                                <div
-                                    class="overlay position-absolute top-0 start-0 w-100 h-100 d-flex justify-content-center align-items-center">
-                                    <div class="text-center text-white p-3 p-md-4 p-lg-5 banner-content-box">
-                                        <h2 class="display-3 fw-bold">Join India’s Best Abacus Franchise</h2>
-                                        <p>Start abacus franchise in India with our expert support.
-                                            A low investment franchise in education with high returns!
-                                        </p>
-                                        <button onclick="msgBox()" id="chat-box" class="theme-btn-2 mt-4"
-                                            role="button"><span class="text">KNOW
-                                                MORE</span></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#banner-slide"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#banner-slide"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
+                    <!-- Modern Hero Section -->
+                    <div class="hero-section d-flex align-items-center position-relative overflow-hidden">
+                        <!-- Background Shapes -->
+                        <div class="hero-shape shape-1"></div>
+                        <div class="hero-shape shape-2"></div>
 
+                        <div class="container py-5">
+                            <div class="row align-items-center gy-5">
+                                <!-- Text Content -->
+                                <div class="col-lg-6 order-2 order-lg-1">
+                                    <div class="hero-content pe-lg-5 text-center text-lg-start">
+                                        <div class="badge-pill mb-3 fade-in-up" style="animation-delay: 0.1s;">
+                                            <i class="fa-solid fa-star text-warning me-2"></i> Trusted by 3 Lakh+
+                                            Parents
+                                        </div>
+                                        <h1 class="display-4 fw-bold mb-4 text-dark hero-title fade-in-up"
+                                            style="animation-delay: 0.2s;">
+                                            Unlock Your Child's <br>
+                                            <span class="text-gradient">Genius Potential</span>
+                                        </h1>
+                                        <p class="lead text-secondary mb-5 hero-text fade-in-up"
+                                            style="animation-delay: 0.3s;">
+                                            The world's leading Abacus training program that boosts memory, focus, and
+                                            calculation speed for kids aged 4-14.
+                                        </p>
+                                        <div class="d-flex justify-content-center justify-content-lg-start gap-3 fade-in-up"
+                                            style="animation-delay: 0.4s;">
+                                            <a href="contact-us.html" class="theme-btn bg-btn hover-lift">
+                                                Enquire Now <i class="fa-solid fa-arrow-right ms-2"></i>
+                                            </a>
+                                            <a href="#about-us" class="theme-btn btn-outline-primary hover-lift">
+                                                <i class="fa-solid fa-play me-2"></i> Watch Video
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Image Content -->
+                                <div class="col-lg-6 order-1 order-lg-2">
+                                    <div class="hero-image-wrapper position-relative text-center slide-in-right">
+                                        <!-- Main Image -->
+                                        <div class="hero-img-container">
+                                            <img src="images/about-us/kid-with-abacus.jpeg" alt="Child learning abacus"
+                                                class="img-fluid rounded-4 shadow-premium hero-main-img">
+                                        </div>
+
+                                        <!-- Floating Elements (Decorative) -->
+                                        <div class="floating-badge badge-1 glass d-none d-md-flex">
+                                            <i class="fa-solid fa-brain text-gradient fs-4"></i>
+                                            <div class="ms-3 text-start">
+                                                <small class="d-block text-muted fw-bold">Boosts</small>
+                                                <span class="fw-bold text-dark">Brain Power</span>
+                                            </div>
+                                        </div>
+
+                                        <div class="floating-badge badge-2 glass d-none d-md-flex">
+                                            <i class="fa-solid fa-calculator text-gradient fs-4"></i>
+                                            <div class="ms-3 text-start">
+                                                <small class="d-block text-muted fw-bold">Improves</small>
+                                                <span class="fw-bold text-dark">Math Speed</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
