--- a/index.html
+++ b/index.html
@@ -241,95 +241,120 @@
                     </button>
                 </div>
                 <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
+                    aria-labelledby="offcanvasNavbarLabel" data-bs-scroll="false">
+                    <div class="offcanvas-header d-flex justify-content-between align-items-center border-bottom pb-3">
+                        <img src="images/brandslogo/1.png" alt="Ideal Play Abacus" style="height: 40px; width: auto;">
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
-                        <ul
-                            class="navbar-nav justify-content-start align-items-start align-items-md-start align-items-lg-center flex-grow-1 gap-2 gap-md-2 gap-lg-5">
+                        <ul class="navbar-nav justify-content-start flex-grow-1 gap-2 gap-lg-4">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html"><i
-                                        class="fa-solid fa-house me-1"></i> Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html">
+                                    <i class="fa-solid fa-house me-2"></i> Home
+                                </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="about-us.html"><i class="fa-solid fa-user-group me-1"></i>
-                                    About Us</a>
+                                <a class="nav-link" href="about-us.html">
+                                    <i class="fa-solid fa-user-group me-2"></i> About Us
+                                </a>
                             </li>
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle drop-box text-start" type="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa-solid fa-book-open me-1"></i> Our Courses
-                                </button>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="our-courses/abacus.html">Abacus</a>
-                                    </li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                    <i class="fa-solid fa-book-open me-2"></i> Our Courses
+                                </a>
+                                <ul class="dropdown-menu border-0 shadow-sm mt-0">
+                                    <li><a class="dropdown-item" href="our-courses/abacus.html">Abacus</a></li>
                                     <li><a class="dropdown-item" href="our-courses/speed-arithmetic.html">Vedic
                                             Mathematics</a></li>
-                                    <li><a class="dropdown-item" href="our-courses/arka-kids.html">Arka
-                                            Kids</a>
-                                    </li>
+                                    <li><a class="dropdown-item" href="our-courses/arka-kids.html">Arka Kids</a></li>
                                     <li><a class="dropdown-item" href="our-courses/creative-arts-india.html">Creative
                                             Art India</a></li>
                                     <li><a class="dropdown-item" href="our-courses/phonics-star.html">Phonics Star</a>
                                     </li>
                                     <li><a class="dropdown-item" href="our-courses/handwriting.html">Handwriting</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="our-courses/brite-english.html">Brite
-                                            English</a></li>
-                                    <li><a class="dropdown-item" href="our-courses/brain-tree.html">Brain
-                                            Tree</a>
+                                    <li><a class="dropdown-item" href="our-courses/brite-english.html">Brite English</a>
                                     </li>
-                                    <li><a class="dropdown-item" href="our-courses/my-math.html">My Math</a>
-                                    </li>
+                                    <li><a class="dropdown-item" href="our-courses/brain-tree.html">Brain Tree</a></li>
+                                    <li><a class="dropdown-item" href="our-courses/my-math.html">My Math</a></li>
                                 </ul>
-                            </div>
-                            <li class="nav-item">
-                                <a class="nav-link" href="gallery.html"><i class="fa-solid fa-images me-1"></i>
-                                    Gallery</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-phone me-1"></i>
-                                    Contact Us</a>
+                                <a class="nav-link" href="gallery.html">
+                                    <i class="fa-solid fa-images me-2"></i> Gallery
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="contact-us.html">
+                                    <i class="fa-solid fa-phone me-2"></i> Contact Us
+                                </a>
                             </li>
                         </ul>
-                        <a class="d-flex d-md-flex d-lg-none mt-4 text-white justify-content-start align-items-center gap-2 franchise-btn"
-                            href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp">
-                            <h3 class="m-0">Franchisee Portal</h3><i
-                                class="fa-solid fa-exclamation fa-bounce text-warning"></i>
-                        </a>
-                        <div
-                            class="d-flex d-md-flex d-xl-none justify-content-start align-items-start flex-column w-100 gap-2 mt-4 mb-2">
-                            <div class="d-flex justify-content-start align-items-start flex-column text-white">
-                                <p class="m-0 text-white-50 small fw-bold">MAIL US</p>
-                                <a href="mailto:contact@playabacusindia.com"
-                                    class="text-white text-decoration-none">contact@playabacusindia.com</a>
+
+                        <!-- Mobile Sidebar Footer Actions -->
+                        <div class="d-lg-none mt-4 pt-4 border-top">
+                            <a href="https://idealplayabacusindia.com/FranchiseeLogin/login.asp"
+                                class="btn btn-outline-primary w-100 mb-3 rounded-pill fw-bold d-flex justify-content-between align-items-center px-4">
+                                Franchisee Portal <i class="fa-solid fa-arrow-right"></i>
+                            </a>
+
+                            <div class="d-flex flex-column gap-3 mb-4">
+                                <div class="d-flex align-items-center gap-3">
+                                    <div class="icon-circle bg-light text-primary rounded-circle p-2">
+                                        <i class="fa-solid fa-envelope"></i>
+                                    </div>
+                                    <div>
+                                        <small class="text-secondary d-block fw-semibold">MAIL US</small>
+                                        <a href="mailto:contact@playabacusindia.com"
+                                            class="text-dark fw-bold text-decoration-none small">contact@playabacusindia.com</a>
+                                    </div>
+                                </div>
+                                <div class="d-flex align-items-center gap-3">
+                                    <div class="icon-circle bg-light text-primary rounded-circle p-2">
+                                        <i class="fa-solid fa-phone"></i>
+                                    </div>
+                                    <div>
+                                        <small class="text-secondary d-block fw-semibold">CALL US</small>
+                                        <a href="tel:919940416989"
+                                            class="text-dark fw-bold text-decoration-none small">+91 99404 16989</a>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="d-flex justify-content-start align-items-start flex-column text-white">
-                                <p class="m-0 text-white-50 small fw-bold">CALL US</p>
-                                <a href="tel:919940416989" class="text-white text-decoration-none">+91 99404 16989</a>
-                            </div>
-                        </div>
-                        <div class="d-flex d-md-flex d-xl-none align-items-start w-100 flex-column mt-auto pb-4">
-                            <h3 class="text-white mb-3">Follow Us</h3>
-                            <div class="d-flex align-items-center gap-4 social-icon">
-                                <a href="https://www.facebook.com/idealplayabacusindiapvtltd/" title="Facebook"><img
-                                        src="images/socialicons/facebook.svg" alt="Facebook"></a>
-                                <a href="https://www.instagram.com/ideal_play_abacus_india/" title="Instagram"><img
-                                        src="images/socialicons/instagram.svg" alt="Instagram"></a>
-                                <a href="https://x.com/PlayAbacus" title="X (Twitter)"><img
-                                        src="images/socialicons/x.svg" alt="X"></a>
-                                <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"
-                                    title="WhatsApp"><img src="images/socialicons/whatsapp.svg" alt="WhatsApp"></a>
-                                <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ" title="YouTube"><img
-                                        src="images/socialicons/youtube.svg" alt="YouTube"></a>
-                                <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"
-                                    title="LinkedIn"><img src="images/socialicons/linkedin.svg" alt="LinkedIn"></a>
+
+                            <div class="social-links-sidebar">
+                                <h6 class="text-secondary mb-3 small fw-bold">FOLLOW US</h6>
+                                <div class="d-flex gap-3">
+                                    <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"
+                                        class="text-muted fs-5 hover-lift"><i class="fa-brands fa-facebook"></i></a>
+                                    <a href="https://www.instagram.com/ideal_play_abacus_india/"
+                                        class="text-muted fs-5 hover-lift"><i class="fa-brands fa-instagram"></i></a>
+                                    <a href="https://x.com/PlayAbacus" class="text-muted fs-5 hover-lift"><i
+                                            class="fa-brands fa-x-twitter"></i></a>
+                                    <a href="https://wa.me/919940416989" class="text-muted fs-5 hover-lift"><i
+                                            class="fa-brands fa-whatsapp"></i></a>
+                                    <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"
+                                        class="text-muted fs-5 hover-lift"><i class="fa-brands fa-youtube"></i></a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+
+                <!-- Auto-close Offcanvas Script -->
+                <script>
+                    document.addEventListener('DOMContentLoaded', function () {
+                        var offcanvasElement = document.getElementById('offcanvasNavbar');
+                        var offcanvas = new bootstrap.Offcanvas(offcanvasElement);
+                        var navLinks = offcanvasElement.querySelectorAll('.nav-link:not(.dropdown-toggle)');
+
+                        navLinks.forEach(function (link) {
+                            link.addEventListener('click', function () {
+                                offcanvas.hide();
+                            });
+                        });
+                    });
+                </script>
         </nav>
     </header>
     <main style="overflow:hidden" class="w-100">
